# grout

./: .clang-format  .codespellrc  GNUmakefile  go.mod  meson.build
.copr/: Makefile
.github/workflows/: ci.yml  publish.yml
api/: client.c  codec.c  codec_test.c  gr_api.h  gr_api_client_impl.h  gr_clock.h  gr_codec.h  gr_string.h  main_codec.c  meson.build
cli/: cli.h  complete.c  main.c
devtools/: complexity.json  node-complexity
frr/: meson.build  rt_grout.c  zebra_dplane_grout.c
go/: affinity.go  conntrack.go  dhcp.go  errors.go  event.go  gr_api.h  gr_api_client_impl.h  gr_bitops.h  gr_clock.h  gr_conntrack.h  gr_dhcp.h  gr_errno.h  gr_infra.h  gr_ip4.h  gr_ip6.h  gr_ipip.h  gr_l2.h  gr_macro.h  gr_nat.h  gr_net_compat.h  gr_net_types.h  gr_nexthop.h  gr_srv6.h  gr_version.h  grout.go  grout.h  iface.go  ip4.go  ip6.go  l2.go  meson.build  nat.go  nexthop.go  shim.c  shim.h  srv6.go  stats.go  types.go
main/: api.c  event.c  gr_event.h  gr_module.h
modules/dhcp/api/: dhcp_codec.c  meson.build
modules/dhcp/datapath/: dhcp_input.c
modules/infra/api/: gr_iface_codec.h  gr_infra.h  gr_nexthop.h  gr_nexthop_codec.h  iface.c  infra_codec.c  meson.build  nexthop.c  nexthop_codec.c
modules/infra/cli/: events.c  gr_cli_l3.h  (+4 more)
modules/ipip/: datapath_in.c  datapath_out.c  ipip_codec.c  ipip_priv.h  meson.build
modules/l4/: l4_input_local.c  l4_loopback_output.c  ospf_redirect.c
mpack/: meson.build
rpm/: frr.spec  grout.spec
smoke/: _init.sh  _init_frr.sh  config_test.sh  fib_inject.c  ip_forward_error_test.sh
subprojects/: dpdk.wrap  ecoli.wrap
(+111 files in other folders)
